[package]
name = "pallet-multibatching"
version = "1.0.0-dev"
description = "Off-line multisignature atomic batching"
authors = ["Mykola Samardak <niksaak@gmail.com>"]
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

account = { workspace = true, optional = true }
sp-core = { workspace = true, default-features = false, optional = true }
sp-io = { workspace = true, default-features = false, optional = true }

#hex = { workspace = true, default-features = false } # TODO: for debugging, delete this later

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
account = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-keystore = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
    "pallet-balances/std",
    "account?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "account",
    "sp-core",
    "sp-io",
]
try-runtime = ["frame-support/try-runtime"]
